      method. The method was size(history) and not desirable. (Robert Collins)

    * ``revision.revision_graph`` is deprecated, with no replacement function.
      The function was size(history) and not desirable. (Robert Collins)

    * ``Transport.get_shared_medium`` is deprecated.  Use
      ``Transport.get_smart_medium`` instead.  (Andrew Bennetts)

    * ``VersionedFile.create_empty`` is removed. This method presupposed a
      sensible mapping to a transport for individual files, but pack backed
      versioned files have no such mapping. (Robert Collins)

    * ``VersionedFile.get_graph`` is deprecated, with no replacement method.
      The method was size(history) and not desirable. (Robert Collins)

    * ``VersionedFile.get_graph_with_ghosts`` is deprecated, with no
      replacement method.  The method was size(history) and not desirable.
      (Robert Collins)

    * ``VersionedFile.get_parents`` is deprecated, please use
      ``VersionedFile.get_parent_map``. (Robert Collins)

    * ``VersionedFile.has_ghost`` is now deprecated, as it is both expensive
      and unused outside of a single test. (Robert Collins)

  TESTING:

    * New -Dselftest_debug flag disables clearing of the debug flags during
      tests.  This is useful if you want to use e.g. -Dhpss to help debug a
      failing test.  Be aware that using this feature is likely to cause
      spurious test failures if used with the full suite. (Andrew Bennetts)

    * selftest --load-list now uses a new more agressive test loader that will
      avoid loading unneeded modules and building their tests. Plugins can use
      this new loader by defining a load_tests function instead of a test_suite
      function. (a forthcoming patch will provide many examples on how to
      implement this).
      (Vincent Ladeuil)

    * selftest --load-list now does some sanity checks regarding duplicate test
      IDs and tests present in the list but not found in the actual test suite.