@@ -56,6 +56,10 @@ from bzrlib.inter import InterObject
 from bzrlib.inventory import Inventory, InventoryDirectory, ROOT_ID
 from bzrlib.symbol_versioning import (
         deprecated_method,
+        one_one,
+        one_two,
+        one_three,
+        one_four,
         )
 from bzrlib.trace import mutter, mutter_callsite, note, warning
 
@@ -871,7 +875,7 @@ class Repository(object):
         return InterRepository.get(other, self).search_missing_revision_ids(
             revision_id, find_ghosts)
 
-    @deprecated_method(symbol_versioning.one_two)
+    @deprecated_method(one_two)
     @needs_read_lock
     def missing_revision_ids(self, other, revision_id=None, find_ghosts=True):
         """Return the revision ids that other has that this does not.
@@ -1552,7 +1556,7 @@ class Repository(object):
         return self.get_revision(revision_id).inventory_sha1
 
     @needs_read_lock
-    @deprecated_method(symbol_versioning.one_four)
+    @deprecated_method(one_four)
     def get_revision_graph(self, revision_id=None):
         """Return a dictionary containing the revision graph.
 
@@ -1567,7 +1571,7 @@ class Repository(object):
         raise NotImplementedError(self.get_revision_graph)
 
     @needs_read_lock
-    @deprecated_method(symbol_versioning.one_three)
+    @deprecated_method(one_three)
     def get_revision_graph_with_ghosts(self, revision_ids=None):
         """Return a graph of the revisions with ghosts marked as applicable.
 
@@ -1724,6 +1728,7 @@ class Repository(object):
         """
 
     @needs_read_lock
+    @deprecated_method(one_four)
     def print_file(self, file, revision_id):
         """Print `file` to stdout.
         
@@ -1747,7 +1752,7 @@ class Repository(object):
     def revision_parents(self, revision_id):
         return self.get_inventory_weave().parent_names(revision_id)
 
-    @deprecated_method(symbol_versioning.one_one)
+    @deprecated_method(one_one)
     def get_parents(self, revision_ids):
         """See StackedParentsProvider.get_parents"""
         parent_map = self.get_parent_map(revision_ids)
@@ -2403,7 +2408,7 @@ class InterRepository(InterObject):
             searcher.stop_searching_any(have_revs)
         return searcher.get_result()
    
-    @deprecated_method(symbol_versioning.one_two)
+    @deprecated_method(one_two)
     @needs_read_lock
     def missing_revision_ids(self, revision_id=None, find_ghosts=True):
         """Return the revision ids that source has that target does not.
